--- a/hr_workweek/views/res_config_settings.xml
+++ b/hr_workweek/views/res_config_settings.xml
@@ -5,7 +5,7 @@
         <field name="model">res.config.settings</field>
         <field name='inherit_id' ref='hr.res_config_settings_view_form' />
         <field name="arch" type="xml">
-            <xpath expr="//div[@data-key='hr']" position="inside">
+            <xpath expr="//app[@name='hr']" position="inside">
                 <h2>Workweeks settings</h2>
                 <div class="row mt16 o_settings_container">
                     <div class="col-xs-12 col-md-6 o_setting_box">
